Created and pushed by LingoHub. Project: 'subliminal' by User: 'diaoulael@gmail.com'.

--- a/examples/i18n/fr.po
+++ b/examples/i18n/fr.po
@@ -11,109 +11,89 @@ msgstr ""
 "POT-Creation-Date: 2015-08-27 16:32+0200\n"
 "PO-Revision-Date: 2015-08-27 13:59+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/subliminal/subliminal/language/fr/)\n"
+"Language-Team: French (http://www.transifex.com/subliminal/subliminal/"
+"language/fr/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Content-Type: text/plain; charset=UTF-8"
 
-#: ui/choose.glade.h:1
 msgid "Subliminal - Choose subtitles"
 msgstr "Subliminal - Choisir les sous-titres"
 
-#: ui/choose.glade.h:2
 msgid "Video: "
 msgstr "Vidéo: "
 
-#: ui/choose.glade.h:3
 msgid "Language"
 msgstr "Langue"
 
-#: ui/choose.glade.h:4
 msgid "Score"
 msgstr "Score"
 
-#: ui/choose.glade.h:5
 msgid "Provider"
 msgstr "Fournisseur"
 
-#: ui/choose.glade.h:6
 msgid "Hearing Impaired"
 msgstr "Malentendant"
 
-#: ui/choose.glade.h:7
 msgid "Downloaded"
 msgstr "Téléchargé"
 
-#: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
 msgstr "Des sous-titres, sans y penser."
 
-#: ui/config.glade.h:2
 msgid "Name"
 msgstr "Nom"
 
-#: ui/config.glade.h:3
 msgid "Code"
 msgstr "Code"
 
-#: ui/config.glade.h:4
 msgid "Languages"
 msgstr "Langues"
 
-#: ui/config.glade.h:5
 msgid "Configuration"
 msgstr "Configuration"
 
-#: ui/config.glade.h:6
 msgid "Providers"
 msgstr "Fournisseurs"
 
-#: ui/config.glade.h:7
 msgid "Do not use this unless your media player requires it"
 msgstr "Ne pas utiliser à moins que le lecteur multimédia ne le requiert"
 
-#: ui/config.glade.h:8
 msgid ""
 "Save subtitle without language code in the filename\n"
 "i.e. use .srt extension"
-msgstr "Sauvegarder les sous-titres sans code de langue dans\nle nom du fichier, c.-a-d. utiliser .srt comme extension"
+msgstr ""
+"Sauvegarder les sous-titres sans code de langue dans\n"
+"le nom du fichier, c.-a-d. utiliser .srt comme extension"
 
-#: ui/config.glade.h:10
 msgid "Ignore videos with embedded subtitles"
 msgstr "Ignorer les vidéos avec des sous-titres intégrés"
 
-#: ui/config.glade.h:11
-msgid ""
-"Ignore videos older than this number of days\n"
+msgid "Ignore videos older than this number of days\n"
 "when scanning folders"
-msgstr "Ignorer les vidéos plus vieilles que ce nombre\nde jours lors du scan de dossiers"
+msgstr ""
+"Ignorer les vidéos plus vieilles que ce nombre\n"
+"de jours lors du scan de dossiers"
 
-#: ui/config.glade.h:13
 msgid "Prefer hearing impaired subtitles"
 msgstr "Préférer les sous-titres pour malentendants"
 
-#: ui/config.glade.h:14
 msgid "Minimum matching score"
 msgstr "Score de correspondance minimum"
 
-#: ui/config.glade.h:15
 msgid "General"
 msgstr "Général"
 
-#: ui/config.glade.h:16
 msgid "About"
 msgstr "À propos"
 
-#: nautilus.py:141
 msgid "Choose subtitles"
 msgstr "Choisir les sous-titres"
 
-#: nautilus.py:146
 msgid "Download subtitles"
 msgstr "Télécharger les sous-titres"
 
-#: nautilus.py:151
 msgid "Configure..."
 msgstr "Configurer..."
