--- a/examples/i18n/tr.po
+++ b/examples/i18n/tr.po
@@ -3,117 +3,117 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Antoine Bertin <diaoulael@gmail.com>, 2015
+# Özgür BASKIN, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-27 16:32+0200\n"
-"PO-Revision-Date: 2015-08-27 14:44+0000\n"
-"Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/subliminal/subliminal/language/fr/)\n"
+"PO-Revision-Date: 2015-08-28 12:30+0000\n"
+"Last-Translator: Özgür BASKIN\n"
+"Language-Team: Turkish (http://www.transifex.com/subliminal/subliminal/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
+"Language: tr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ui/choose.glade.h:1
 msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Choisir les sous-titres"
+msgstr "Subliminal - Altyazı seç"
 
 #: ui/choose.glade.h:2
 msgid "Video: "
-msgstr "Vidéo: "
+msgstr "Video: "
 
 #: ui/choose.glade.h:3
 msgid "Language"
-msgstr "Langue"
+msgstr "Dil"
 
 #: ui/choose.glade.h:4
 msgid "Score"
-msgstr "Score"
+msgstr "Puan"
 
 #: ui/choose.glade.h:5
 msgid "Provider"
-msgstr "Fournisseur"
+msgstr "Sağlayıcı"
 
 #: ui/choose.glade.h:6
 msgid "Hearing Impaired"
-msgstr "Malentendant"
+msgstr "İşitme Engelliler"
 
 #: ui/choose.glade.h:7
 msgid "Downloaded"
-msgstr "Téléchargé"
+msgstr "İndirildi"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
-msgstr "Des sous-titres, sans y penser."
+msgstr "Altyazı, düşüncelerinizden daha hızlı."
 
 #: ui/config.glade.h:2
 msgid "Name"
-msgstr "Nom"
+msgstr "Ad"
 
 #: ui/config.glade.h:3
 msgid "Code"
-msgstr "Code"
+msgstr "Kod"
 
 #: ui/config.glade.h:4
 msgid "Languages"
-msgstr "Langues"
+msgstr "Dil"
 
 #: ui/config.glade.h:5
 msgid "Configuration"
-msgstr "Configuration"
+msgstr "Yapılandırma"
 
 #: ui/config.glade.h:6
 msgid "Providers"
-msgstr "Fournisseurs"
+msgstr "Sağlayıcılar"
 
 #: ui/config.glade.h:7
 msgid "Do not use this unless your media player requires it"
-msgstr "Ne pas utiliser à moins que le lecteur multimédia ne le requiert"
+msgstr "Medya oynatıcınız için gerekli olmadığı sürece bunu kullanmayın"
 
 #: ui/config.glade.h:8
 msgid ""
 "Save subtitle without language code in the filename\n"
 "i.e. use .srt extension"
-msgstr "Sauvegarder les sous-titres sans code de langue dans\nle nom du fichier, c.-a-d. utiliser .srt comme extension"
+msgstr "Altyazıları dosya adına dil kodunu eklemeden kaydet\nyani .srt eklentisini kullan"
 
 #: ui/config.glade.h:10
 msgid "Ignore videos with embedded subtitles"
-msgstr "Ignorer les vidéos avec des sous-titres intégrés"
+msgstr "Gömülü altyazıları olan videoları yoksay"
 
 #: ui/config.glade.h:11
 msgid ""
 "Ignore videos older than this number of days\n"
 "when scanning folders"
-msgstr "Ignorer les vidéos plus vieilles que ce nombre\nde jours lors du scan de dossiers"
+msgstr "Klasörleri tararken bu gün sayısından daha eski\nvideoları yoksay"
 
 #: ui/config.glade.h:13
 msgid "Prefer hearing impaired subtitles"
-msgstr "Préférer les sous-titres pour malentendants"
+msgstr "İşitme engelli altyazılarını tercih et"
 
 #: ui/config.glade.h:14
 msgid "Minimum matching score"
-msgstr "Score de correspondance minimum"
+msgstr "En düşük eşleşme puanı"
 
 #: ui/config.glade.h:15
 msgid "General"
-msgstr "Général"
+msgstr "Genel"
 
 #: ui/config.glade.h:16
 msgid "About"
-msgstr "À propos"
+msgstr "Hakkında"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
-msgstr "Choisir les sous-titres"
+msgstr "Altyazıyı seç"
 
 #: nautilus.py:146
 msgid "Download subtitles"
-msgstr "Télécharger les sous-titres"
+msgstr "Altyazıyı indir"
 
 #: nautilus.py:151
 msgid "Configure..."
-msgstr "Configurer..."
+msgstr "Yapılandır..."
