--- a/examples/i18n/de.po
+++ b/examples/i18n/de.po
@@ -3,56 +3,56 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Antoine Bertin <diaoulael@gmail.com>, 2015
+# Andrej Ebert <mask@mask.ms>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-27 16:32+0200\n"
-"PO-Revision-Date: 2015-08-27 14:44+0000\n"
+"PO-Revision-Date: 2015-09-09 18:28+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/subliminal/subliminal/language/fr/)\n"
+"Language-Team: German (http://www.transifex.com/subliminal/subliminal/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ui/choose.glade.h:1
 msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Choisir les sous-titres"
+msgstr "Subliminal - Untertitel auswählen"
 
 #: ui/choose.glade.h:2
 msgid "Video: "
-msgstr "Vidéo: "
+msgstr "Video:"
 
 #: ui/choose.glade.h:3
 msgid "Language"
-msgstr "Langue"
+msgstr "Sprache"
 
 #: ui/choose.glade.h:4
 msgid "Score"
-msgstr "Score"
+msgstr "Bewertung"
 
 #: ui/choose.glade.h:5
 msgid "Provider"
-msgstr "Fournisseur"
+msgstr "Anbieter"
 
 #: ui/choose.glade.h:6
 msgid "Hearing Impaired"
-msgstr "Malentendant"
+msgstr "Hörgeschädigt"
 
 #: ui/choose.glade.h:7
 msgid "Downloaded"
-msgstr "Téléchargé"
+msgstr "Runtergeladen"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
-msgstr "Des sous-titres, sans y penser."
+msgstr "Untertitel, schneller als Gedanken"
 
 #: ui/config.glade.h:2
 msgid "Name"
-msgstr "Nom"
+msgstr "Name"
 
 #: ui/config.glade.h:3
 msgid "Code"
@@ -60,60 +60,60 @@ msgstr "Code"
 
 #: ui/config.glade.h:4
 msgid "Languages"
-msgstr "Langues"
+msgstr "Sprachen"
 
 #: ui/config.glade.h:5
 msgid "Configuration"
-msgstr "Configuration"
+msgstr "Konfiguration"
 
 #: ui/config.glade.h:6
 msgid "Providers"
-msgstr "Fournisseurs"
+msgstr "Anbieter"
 
 #: ui/config.glade.h:7
 msgid "Do not use this unless your media player requires it"
-msgstr "Ne pas utiliser à moins que le lecteur multimédia ne le requiert"
+msgstr "Nicht benutzen, außer ihr Mediaplayer braucht dies"
 
 #: ui/config.glade.h:8
 msgid ""
 "Save subtitle without language code in the filename\n"
 "i.e. use .srt extension"
-msgstr "Sauvegarder les sous-titres sans code de langue dans\nle nom du fichier, c.-a-d. utiliser .srt comme extension"
+msgstr "Untertitel ohne Sprachcode im Dateinamen speichern, also mit .srt Erweiterung "
 
 #: ui/config.glade.h:10
 msgid "Ignore videos with embedded subtitles"
-msgstr "Ignorer les vidéos avec des sous-titres intégrés"
+msgstr "Videos mit eingebetteten Untertiteln ignorieren"
 
 #: ui/config.glade.h:11
 msgid ""
 "Ignore videos older than this number of days\n"
 "when scanning folders"
-msgstr "Ignorer les vidéos plus vieilles que ce nombre\nde jours lors du scan de dossiers"
+msgstr "Videos älter als diese Anzahl an Tagen ignorieren"
 
 #: ui/config.glade.h:13
 msgid "Prefer hearing impaired subtitles"
-msgstr "Préférer les sous-titres pour malentendants"
+msgstr "Untertitel für hörgeschädigte vorziehen"
 
 #: ui/config.glade.h:14
 msgid "Minimum matching score"
-msgstr "Score de correspondance minimum"
+msgstr "Minimale Bewertung"
 
 #: ui/config.glade.h:15
 msgid "General"
-msgstr "Général"
+msgstr "Allgemein"
 
 #: ui/config.glade.h:16
 msgid "About"
-msgstr "À propos"
+msgstr "Über"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
-msgstr "Choisir les sous-titres"
+msgstr "Untertitel auswählen"
 
 #: nautilus.py:146
 msgid "Download subtitles"
-msgstr "Télécharger les sous-titres"
+msgstr "Untertitel runterladen"
 
 #: nautilus.py:151
 msgid "Configure..."
-msgstr "Configurer..."
+msgstr "Einstellen..."
