--- a/examples/i18n/it.po
+++ b/examples/i18n/it.po
@@ -3,117 +3,117 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Antoine Bertin <diaoulael@gmail.com>, 2015
+# Stefano Vetrini <stvnove@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-27 16:32+0200\n"
-"PO-Revision-Date: 2015-08-27 14:44+0000\n"
+"PO-Revision-Date: 2015-09-09 18:28+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/subliminal/subliminal/language/fr/)\n"
+"Language-Team: Italian (http://www.transifex.com/subliminal/subliminal/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: it\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ui/choose.glade.h:1
 msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Choisir les sous-titres"
+msgstr "Subliminal - Scegli i sottotitoli"
 
 #: ui/choose.glade.h:2
 msgid "Video: "
-msgstr "Vidéo: "
+msgstr "Video: "
 
 #: ui/choose.glade.h:3
 msgid "Language"
-msgstr "Langue"
+msgstr "Lingua"
 
 #: ui/choose.glade.h:4
 msgid "Score"
-msgstr "Score"
+msgstr "Punteggio"
 
 #: ui/choose.glade.h:5
 msgid "Provider"
-msgstr "Fournisseur"
+msgstr "Fornitore"
 
 #: ui/choose.glade.h:6
 msgid "Hearing Impaired"
-msgstr "Malentendant"
+msgstr "Non Udenti"
 
 #: ui/choose.glade.h:7
 msgid "Downloaded"
-msgstr "Téléchargé"
+msgstr "Scaricati"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
-msgstr "Des sous-titres, sans y penser."
+msgstr "Sottotitola, più veloce della luce."
 
 #: ui/config.glade.h:2
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 #: ui/config.glade.h:3
 msgid "Code"
-msgstr "Code"
+msgstr "Codice"
 
 #: ui/config.glade.h:4
 msgid "Languages"
-msgstr "Langues"
+msgstr "Lingue"
 
 #: ui/config.glade.h:5
 msgid "Configuration"
-msgstr "Configuration"
+msgstr "Configurazione"
 
 #: ui/config.glade.h:6
 msgid "Providers"
-msgstr "Fournisseurs"
+msgstr "Fornitori"
 
 #: ui/config.glade.h:7
 msgid "Do not use this unless your media player requires it"
-msgstr "Ne pas utiliser à moins que le lecteur multimédia ne le requiert"
+msgstr "Non usare a meno che il tuo player video lo richieda"
 
 #: ui/config.glade.h:8
 msgid ""
 "Save subtitle without language code in the filename\n"
 "i.e. use .srt extension"
-msgstr "Sauvegarder les sous-titres sans code de langue dans\nle nom du fichier, c.-a-d. utiliser .srt comme extension"
+msgstr "Salva il sottotitolo senza il codice del linguaggio nel nome del file\nes. solo estensione .srt"
 
 #: ui/config.glade.h:10
 msgid "Ignore videos with embedded subtitles"
-msgstr "Ignorer les vidéos avec des sous-titres intégrés"
+msgstr "Ignora i video con sottotitoli incorporati"
 
 #: ui/config.glade.h:11
 msgid ""
 "Ignore videos older than this number of days\n"
 "when scanning folders"
-msgstr "Ignorer les vidéos plus vieilles que ce nombre\nde jours lors du scan de dossiers"
+msgstr "Ignora i video più vecchi di questo numero di giorni\nquando ricerchi nelle cartelle"
 
 #: ui/config.glade.h:13
 msgid "Prefer hearing impaired subtitles"
-msgstr "Préférer les sous-titres pour malentendants"
+msgstr "Preferisci i sottotitoli per non udenti"
 
 #: ui/config.glade.h:14
 msgid "Minimum matching score"
-msgstr "Score de correspondance minimum"
+msgstr "Valore minimo per il punteggio dell'abbinamento"
 
 #: ui/config.glade.h:15
 msgid "General"
-msgstr "Général"
+msgstr "Generale"
 
 #: ui/config.glade.h:16
 msgid "About"
-msgstr "À propos"
+msgstr "Informazioni"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
-msgstr "Choisir les sous-titres"
+msgstr "Scegli i sottotitoli"
 
 #: nautilus.py:146
 msgid "Download subtitles"
-msgstr "Télécharger les sous-titres"
+msgstr "Scarica i sottotitoli"
 
 #: nautilus.py:151
 msgid "Configure..."
-msgstr "Configurer..."
+msgstr "Configura..."
