--- a/examples/i18n/pt.po
+++ b/examples/i18n/pt.po
@@ -3,117 +3,117 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Antoine Bertin <diaoulael@gmail.com>, 2015
+# João Silva <asmodeo.pt@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-27 16:32+0200\n"
-"PO-Revision-Date: 2015-08-27 14:44+0000\n"
-"Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/subliminal/subliminal/language/fr/)\n"
+"PO-Revision-Date: 2015-10-25 18:47+0000\n"
+"Last-Translator: João Silva <asmodeo.pt@gmail.com>\n"
+"Language-Team: Portuguese (http://www.transifex.com/subliminal/subliminal/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: pt\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ui/choose.glade.h:1
 msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Choisir les sous-titres"
+msgstr "Subliminal - Escolher legendas"
 
 #: ui/choose.glade.h:2
 msgid "Video: "
-msgstr "Vidéo: "
+msgstr "Vídeo:"
 
 #: ui/choose.glade.h:3
 msgid "Language"
-msgstr "Langue"
+msgstr "Idioma"
 
 #: ui/choose.glade.h:4
 msgid "Score"
-msgstr "Score"
+msgstr "Pontuação"
 
 #: ui/choose.glade.h:5
 msgid "Provider"
-msgstr "Fournisseur"
+msgstr "Fornecedor"
 
 #: ui/choose.glade.h:6
 msgid "Hearing Impaired"
-msgstr "Malentendant"
+msgstr "Deficientes Auditivos"
 
 #: ui/choose.glade.h:7
 msgid "Downloaded"
-msgstr "Téléchargé"
+msgstr "Transferida"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
-msgstr "Des sous-titres, sans y penser."
+msgstr "Legendas, mais rápido do que os seus pensamentos."
 
 #: ui/config.glade.h:2
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 #: ui/config.glade.h:3
 msgid "Code"
-msgstr "Code"
+msgstr "Código"
 
 #: ui/config.glade.h:4
 msgid "Languages"
-msgstr "Langues"
+msgstr "Idiomas"
 
 #: ui/config.glade.h:5
 msgid "Configuration"
-msgstr "Configuration"
+msgstr "Configuração"
 
 #: ui/config.glade.h:6
 msgid "Providers"
-msgstr "Fournisseurs"
+msgstr "Fornecedores"
 
 #: ui/config.glade.h:7
 msgid "Do not use this unless your media player requires it"
-msgstr "Ne pas utiliser à moins que le lecteur multimédia ne le requiert"
+msgstr "Não use isto a menos que o seu leitor multimédia o exija"
 
 #: ui/config.glade.h:8
 msgid ""
 "Save subtitle without language code in the filename\n"
 "i.e. use .srt extension"
-msgstr "Sauvegarder les sous-titres sans code de langue dans\nle nom du fichier, c.-a-d. utiliser .srt comme extension"
+msgstr "Gravar legenda sem código de idioma no nome de ficheiro\nou seja, usar extensão .srt"
 
 #: ui/config.glade.h:10
 msgid "Ignore videos with embedded subtitles"
-msgstr "Ignorer les vidéos avec des sous-titres intégrés"
+msgstr "Ignorar vídeos com legendas embutidas"
 
 #: ui/config.glade.h:11
 msgid ""
 "Ignore videos older than this number of days\n"
 "when scanning folders"
-msgstr "Ignorer les vidéos plus vieilles que ce nombre\nde jours lors du scan de dossiers"
+msgstr "Ignorar vídeos com mais do que este número de dias\nquando a verificar pastas"
 
 #: ui/config.glade.h:13
 msgid "Prefer hearing impaired subtitles"
-msgstr "Préférer les sous-titres pour malentendants"
+msgstr "Preferir legendas para deficientes auditivos"
 
 #: ui/config.glade.h:14
 msgid "Minimum matching score"
-msgstr "Score de correspondance minimum"
+msgstr "Pontuação mínima correspondente"
 
 #: ui/config.glade.h:15
 msgid "General"
-msgstr "Général"
+msgstr "Geral"
 
 #: ui/config.glade.h:16
 msgid "About"
-msgstr "À propos"
+msgstr "Acerca"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
-msgstr "Choisir les sous-titres"
+msgstr "Escolher legendas"
 
 #: nautilus.py:146
 msgid "Download subtitles"
-msgstr "Télécharger les sous-titres"
+msgstr "Transferir legendas"
 
 #: nautilus.py:151
 msgid "Configure..."
-msgstr "Configurer..."
+msgstr "Configurar..."
