--- a/examples/i18n/pt.po
+++ b/examples/i18n/pt.po
@@ -1,14 +1,12 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Subliminal language file
 # 
 # Translators:
 # João Silva <asmodeo.pt@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-27 16:32+0200\n"
+"Report-Msgid-Bugs-To: diaoulael@gmail.com\n"
+"POT-Creation-Date: 2015-10-30 18:54+0100\n"
 "PO-Revision-Date: 2015-10-25 18:47+0000\n"
 "Last-Translator: João Silva <asmodeo.pt@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/subliminal/subliminal/language/pt/)\n"
@@ -17,34 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: ui/choose.glade.h:1
-msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Escolher legendas"
-
-#: ui/choose.glade.h:2
-msgid "Video: "
-msgstr "Vídeo:"
-
-#: ui/choose.glade.h:3
-msgid "Language"
-msgstr "Idioma"
-
-#: ui/choose.glade.h:4
-msgid "Score"
-msgstr "Pontuação"
-
-#: ui/choose.glade.h:5
-msgid "Provider"
-msgstr "Fornecedor"
-
-#: ui/choose.glade.h:6
-msgid "Hearing Impaired"
-msgstr "Deficientes Auditivos"
-
-#: ui/choose.glade.h:7
-msgid "Downloaded"
-msgstr "Transferida"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
@@ -105,6 +75,34 @@ msgstr "Geral"
 #: ui/config.glade.h:16
 msgid "About"
 msgstr "Acerca"
+
+#: ui/choose.glade.h:1
+msgid "Subliminal - Choose subtitles"
+msgstr "Subliminal - Escolher legendas"
+
+#: ui/choose.glade.h:2
+msgid "Video: "
+msgstr "Vídeo:"
+
+#: ui/choose.glade.h:3
+msgid "Language"
+msgstr "Idioma"
+
+#: ui/choose.glade.h:4
+msgid "Score"
+msgstr "Pontuação"
+
+#: ui/choose.glade.h:5
+msgid "Provider"
+msgstr "Fornecedor"
+
+#: ui/choose.glade.h:6
+msgid "Hearing Impaired"
+msgstr "Deficientes Auditivos"
+
+#: ui/choose.glade.h:7
+msgid "Downloaded"
+msgstr "Transferida"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
