--- a/examples/i18n/pt_BR.po
+++ b/examples/i18n/pt_BR.po
@@ -1,13 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Subliminal language file
 # 
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-27 16:32+0200\n"
+"Report-Msgid-Bugs-To: diaoulael@gmail.com\n"
+"POT-Creation-Date: 2015-10-30 18:54+0100\n"
 "PO-Revision-Date: 2015-10-27 17:05+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/subliminal/subliminal/language/pt_BR/)\n"
@@ -16,34 +14,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-
-#: ui/choose.glade.h:1
-msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Escolher legendas"
-
-#: ui/choose.glade.h:2
-msgid "Video: "
-msgstr "Vídeo: "
-
-#: ui/choose.glade.h:3
-msgid "Language"
-msgstr "Idioma"
-
-#: ui/choose.glade.h:4
-msgid "Score"
-msgstr "Nota"
-
-#: ui/choose.glade.h:5
-msgid "Provider"
-msgstr "Fornecedor"
-
-#: ui/choose.glade.h:6
-msgid "Hearing Impaired"
-msgstr "Pessoas com deficiência auditiva"
-
-#: ui/choose.glade.h:7
-msgid "Downloaded"
-msgstr "Baixado"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
@@ -104,6 +74,34 @@ msgstr "Geral"
 #: ui/config.glade.h:16
 msgid "About"
 msgstr "Acerca"
+
+#: ui/choose.glade.h:1
+msgid "Subliminal - Choose subtitles"
+msgstr "Subliminal - Escolher legendas"
+
+#: ui/choose.glade.h:2
+msgid "Video: "
+msgstr "Vídeo: "
+
+#: ui/choose.glade.h:3
+msgid "Language"
+msgstr "Idioma"
+
+#: ui/choose.glade.h:4
+msgid "Score"
+msgstr "Nota"
+
+#: ui/choose.glade.h:5
+msgid "Provider"
+msgstr "Fornecedor"
+
+#: ui/choose.glade.h:6
+msgid "Hearing Impaired"
+msgstr "Pessoas com deficiência auditiva"
+
+#: ui/choose.glade.h:7
+msgid "Downloaded"
+msgstr "Baixado"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
