--- a/examples/i18n/ru.po
+++ b/examples/i18n/ru.po
@@ -1,14 +1,12 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Subliminal language file
 # 
 # Translators:
 # Andrej Ebert <mask@mask.ms>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-27 16:32+0200\n"
+"Report-Msgid-Bugs-To: diaoulael@gmail.com\n"
+"POT-Creation-Date: 2015-10-30 18:54+0100\n"
 "PO-Revision-Date: 2015-09-09 18:28+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/subliminal/subliminal/language/ru/)\n"
@@ -17,34 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
-
-#: ui/choose.glade.h:1
-msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - выбор субтитров"
-
-#: ui/choose.glade.h:2
-msgid "Video: "
-msgstr "Видео:"
-
-#: ui/choose.glade.h:3
-msgid "Language"
-msgstr "Язык"
-
-#: ui/choose.glade.h:4
-msgid "Score"
-msgstr "Рейтинг"
-
-#: ui/choose.glade.h:5
-msgid "Provider"
-msgstr "Провайдер(сайт)"
-
-#: ui/choose.glade.h:6
-msgid "Hearing Impaired"
-msgstr "Для сабослышащих/глухонемых"
-
-#: ui/choose.glade.h:7
-msgid "Downloaded"
-msgstr "Скачано"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
@@ -105,6 +75,34 @@ msgstr "Общее"
 #: ui/config.glade.h:16
 msgid "About"
 msgstr "О программе"
+
+#: ui/choose.glade.h:1
+msgid "Subliminal - Choose subtitles"
+msgstr "Subliminal - выбор субтитров"
+
+#: ui/choose.glade.h:2
+msgid "Video: "
+msgstr "Видео:"
+
+#: ui/choose.glade.h:3
+msgid "Language"
+msgstr "Язык"
+
+#: ui/choose.glade.h:4
+msgid "Score"
+msgstr "Рейтинг"
+
+#: ui/choose.glade.h:5
+msgid "Provider"
+msgstr "Провайдер(сайт)"
+
+#: ui/choose.glade.h:6
+msgid "Hearing Impaired"
+msgstr "Для сабослышащих/глухонемых"
+
+#: ui/choose.glade.h:7
+msgid "Downloaded"
+msgstr "Скачано"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
