--- a/examples/i18n/de.po
+++ b/examples/i18n/de.po
@@ -1,14 +1,12 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Subliminal language file
 # 
 # Translators:
 # Andrej Ebert <mask@mask.ms>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: subliminal\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-27 16:32+0200\n"
+"Report-Msgid-Bugs-To: diaoulael@gmail.com\n"
+"POT-Creation-Date: 2015-10-30 18:54+0100\n"
 "PO-Revision-Date: 2015-09-09 18:28+0000\n"
 "Last-Translator: Antoine Bertin <diaoulael@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/subliminal/subliminal/language/de/)\n"
@@ -17,34 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: ui/choose.glade.h:1
-msgid "Subliminal - Choose subtitles"
-msgstr "Subliminal - Untertitel auswählen"
-
-#: ui/choose.glade.h:2
-msgid "Video: "
-msgstr "Video:"
-
-#: ui/choose.glade.h:3
-msgid "Language"
-msgstr "Sprache"
-
-#: ui/choose.glade.h:4
-msgid "Score"
-msgstr "Bewertung"
-
-#: ui/choose.glade.h:5
-msgid "Provider"
-msgstr "Anbieter"
-
-#: ui/choose.glade.h:6
-msgid "Hearing Impaired"
-msgstr "Hörgeschädigt"
-
-#: ui/choose.glade.h:7
-msgid "Downloaded"
-msgstr "Runtergeladen"
 
 #: ui/config.glade.h:1
 msgid "Subtitles, faster than your thoughts."
@@ -105,6 +75,34 @@ msgstr "Allgemein"
 #: ui/config.glade.h:16
 msgid "About"
 msgstr "Über"
+
+#: ui/choose.glade.h:1
+msgid "Subliminal - Choose subtitles"
+msgstr "Subliminal - Untertitel auswählen"
+
+#: ui/choose.glade.h:2
+msgid "Video: "
+msgstr "Video:"
+
+#: ui/choose.glade.h:3
+msgid "Language"
+msgstr "Sprache"
+
+#: ui/choose.glade.h:4
+msgid "Score"
+msgstr "Bewertung"
+
+#: ui/choose.glade.h:5
+msgid "Provider"
+msgstr "Anbieter"
+
+#: ui/choose.glade.h:6
+msgid "Hearing Impaired"
+msgstr "Hörgeschädigt"
+
+#: ui/choose.glade.h:7
+msgid "Downloaded"
+msgstr "Runtergeladen"
 
 #: nautilus.py:141
 msgid "Choose subtitles"
