--- a/changelog.d/1175.change.rst
+++ b/changelog.d/1175.change.rst
@@ -1,1 +1,1 @@
-Add cli option to prefer or avoid hearing impaired or foreign only subtitles.
+Add cli option to prefer or disfavor hearing impaired (-hi/-HI) or foreign only (-fo/-FO) subtitles.
