reset score changes

--- a/changelog.d/748.change.rst
+++ b/changelog.d/748.change.rst
@@ -1,2 +1,1 @@
-Use the subtitle FPS for scoring and add a skip-wrong-fps cli option
-to completely skip subtitles with FPS different from the video FPS (if detected)
+Add a skip-wrong-fps cli option to completely skip subtitles with FPS different from the video FPS (if detected)
