--- a/changelog.d/860.change.rst
+++ b/changelog.d/860.change.rst
@@ -1,1 +1,2 @@
-Allow to use the latest of creation and modification date to compute the age of the file.
+By default, use the latest of creation and modification date to compute the age of the file.
+Use the CLI option `--no-use-ctime` to use the modification date only, that was the previous behavior.
