--- a/changelog.d/1336.provider.rst
+++ b/changelog.d/1336.provider.rst
@@ -1,1 +1,1 @@
-OpenSubtitlesCom: replace recursive `_search()` implementation to prevent a stack overflow in some edge case
+OpenSubtitlesCom: replace recursive ``_search()`` implementation to prevent a stack overflow in some edge case
